feat: enhance dependency management with new classes and improved logging